# PNTalk_Virtual-machine

./: CMakeLists.txt  Makefile  docker-compose.yml  output  test.yaml
Translator/: CMakeLists.txt  Dockerfile  Makefile  entrypoint.sh
Translator/lib/: daemon.h  error.h  global.h  lexAnalyzator.h  parse.h  semantic.h
Translator/protos/: build-protobuf.sh
Translator/protos/v3/: translate.proto
Translator/src/: daemon.cpp  error.cpp  lexAnalyzator.cpp  main.cpp  parse.cpp  semantic.cpp
Translator/test/: test1
VM/: CMakeLists.txt  Makefile  entrypoint.sh
VM/lib/: daemon.h  error.h  global.h  instance.h  method.h  object.h  outputgen.h  place.h  trans.h  vm.h
VM/src/: daemon.cpp  error.cpp  instance.cpp  main.cpp  method.cpp  object.cpp  outputgen.cpp  place.cpp  trans.cpp  vm.cpp
lib/: error.h  global.h  lex_analyzator.h
protos/: build-protobuf.sh
protos/v3/: hello.proto  simulate.proto
src/: error.cpp  lex_analyzator.cpp  main.cpp
